<resources>
    <string name="app_name">RealEstateManager</string>
    <string name="price_text">Price (USD)</string>
    <string name="number_of_rooms_txt">Number of rooms </string>
    <string name="surface_txt">Surface (\u33A1) </string>
    <string name="description_txt">Description</string>
    <string name="sold_txt">Sold</string>
    <string name="publication_date_txt">Publication Date (dd/mm/yy)</string>
    <string name="sale_date_txt">Sale Date (dd/mm/yy)</string>
    <string name="address_txt">Complete address</string>
    <string name="locality_txt">Locality</string>
    <string name="save_txt">Save</string>
    <string name="property_successfully_saved_msg">Property successfully saved!</string>
    <string name="update_property_txt">Update property</string>
    <string name="create_property_txt">Create property</string>
    <string name="select_agent_txt">Select Agent</string>
    <string name="point_of_interests_nearby_txt">Point of interests nearby</string>
    <string name="photos_txt">Photos</string>
    <string name="property_type_txt">Property type</string>
    <string name="add_txt">Add</string>
    <string name="set_txt">Set</string>
    <string name="photo_desc_dialog_title">Add photo description</string>
    <string name="set_as_main">Set as main</string>
    <string name="photo_required_msg">At least one photo must be set.</string>
    <string name="sold_field_invalid">Sold date must be specified if the Sold checkbox is checked.</string>
    <string name="media">Media</string>
    <string name="surface">Surface</string>
    <string name="type">Type</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="agent">Agent</string>
    <string name="details_txt">Details</string>
    <string name="edit">Edit</string>
    <string name="filter">Filter</string>
    <string name="view_on_map">View on map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="loan_calculator">Loan calculator</string>
    <string name="rational_location_request_msg">To display nearby restaurants, allow Go4Lunch to access your Location.</string>
    <string name="when_location_permission_denied">"If you continue without allowing the location permission, nearby restaurants will not be displayed neither on the map nor in the restaurants list.     "</string>
    <string name="allow_location_permission">continue</string>
    <string name="not_now_txt">not now</string>
    <string name="continue_without_permission">continue without permission</string>
    <string name="allow_location_permission_1">allow</string>
    <string name="loan_amount">Loan amount (USD)</string>
    <string name="duration_years">Duration (years)</string>
    <string name="assurance_rate">Assurance rate (%)</string>
    <string name="monthly_rate">Interest rate (%)</string>
    <string name="calculate">Calculate</string>
    <string name="monthly_payment">Monthly payment</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="property_content_provider_authorities">com.berete.realestatemanager.data.providers.PropertyProvider</string>
    <string name="min_surface">Min surface (\u33A1)</string>
    <string name="max_surface">Max surface (\u33A1)</string>
    <string name="min_price">Min price (USD)</string>
    <string name="max_price">Max price (USD)</string>
    <string name="published_less_than_x_weeks">Published less than x weeks ago</string>
    <string name="sold_in_the_last_x_months">Sold in the last x months</string>
    <string name="in_the_locality">In the locality</string>
    <string name="min_photo_count">Min photo</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="property_filter_dialog_title">Filter properties</string>
    <string name="contribution_rate">Contribution rate (%)</string>
    <string name="contribution">Contribution</string>
</resources>