<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.EditActivity">

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="2"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/priceEdit"
        />

    <EditText
        android:id="@+id/priceEdit"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/price_text"
        app:layout_constraintTop_toTopOf="@id/typeSpinner"
        app:layout_constraintLeft_toRightOf="@id/typeSpinner"
        app:layout_constraintBottom_toBottomOf="@id/typeSpinner"
        app:layout_constraintRight_toRightOf="parent"
        />


    <EditText
        android:id="@+id/surfaceEdit"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/surface_txt"
        app:layout_constraintTop_toBottomOf="@id/typeSpinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/numberOfRoomsEdit"
        />

    <EditText
        android:id="@+id/numberOfRoomsEdit"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/number_of_rooms_txt"
        app:layout_constraintTop_toTopOf="@id/surfaceEdit"
        app:layout_constraintLeft_toRightOf="@id/surfaceEdit"
        app:layout_constraintBottom_toBottomOf="@id/surfaceEdit"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/availableSince"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="wrap_content"
        android:hint="@string/publication_date_txt"
        app:layout_constraintTop_toBottomOf="@id/surfaceEdit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/saleDate"
        />

    <EditText
        android:id="@+id/saleDate"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1.7"
        android:layout_height="wrap_content"
        android:hint="@string/sale_date_txt"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/availableSince"
        app:layout_constraintBottom_toBottomOf="@id/availableSince"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/sold"
        />

    <CheckedTextView
        android:id="@+id/sold"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/sold_txt"
        app:layout_constraintTop_toTopOf="@id/saleDate"
        app:layout_constraintBottom_toBottomOf="@id/saleDate"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/saleDate"
        />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/saleDate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:id="@+id/agentPhoto"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/agent"
        app:layout_constraintBottom_toTopOf="@id/pointOfInterestsContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address"
        />

    <TextView
        android:id="@+id/agentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Agent Name"
        app:layout_constraintLeft_toRightOf="@id/agentPhoto"
        app:layout_constraintTop_toTopOf="@id/agentPhoto"
        app:layout_constraintBottom_toBottomOf="@id/agentPhoto"
        />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/pointOfInterestsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:flexWrap="wrap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/photosScrollView"
        app:layout_constraintTop_toBottomOf="@id/agentPhoto"
        >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_24"
            />
    </com.google.android.flexbox.FlexboxLayout>

    <HorizontalScrollView
        android:id="@+id/photosScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pointOfInterestsContainer"
        app:layout_constraintBottom_toTopOf="@id/description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:id="@+id/photosContainer"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="150dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="40dp"
                android:src="@drawable/ic_add_photo_70"
                />

        </LinearLayout>

    </HorizontalScrollView>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="4"
        android:hint="@string/description_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photosScrollView"
        />

</androidx.constraintlayout.widget.ConstraintLayout>